public class DinhNgocTraTea extends GreenTea {
	@Override
	public String getName() {
		return "Dinh Ngoc Tra Tea";
	}

	@Override
	public String getFlavor() {
		return "Pure young bud aroma, gentle bitter";
	}

	@Override
	public double getPrice() {
		return 2500000;
	} // 2500 * 1000 VND
}