public abstract class GreenTea implements Tea {
	@Override
	public TeaCategory getCategory() {
		return TeaCategory.GREEN_TEA;
	}
}
