public class JasmineTea extends ScentedTea {
	@Override
	public String getName() {
		return "Jasmine Tea";
	}

	@Override
	public String getFlavor() {
		return "Sweet jasmine floral, light & refreshing";
	}

	@Override
	public double getPrice() {
		return 600000;
	} // 600 * 1000 VND
}
