public class LotusTea extends ScentedTea {
	@Override
	public String getName() {
		return "Lotus Tea";
	}

	@Override
	public String getFlavor() {
		return "Delicate lotus fragrance, mild & calming sweet";
	}

	@Override
	public double getPrice() {
		return 1500000;
	} // 1500 * 1000 VND
}
