public class MocCauTea extends GreenTea {
	@Override
	public String getName() {
		return "Moc Cau Tea";
	}

	@Override
	public String getFlavor() {
		return "Grassy, fresh corn aroma";
	}

	@Override
	public double getPrice() {
		return 350000;
	} // 350 * 1000 VND
}