public class TeaTax {
    public static final double TEA_TAX = 0.08;
}
